upadte the note editor related codes
